plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'io.limeup'
version = '0.0.1'


tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += "--enable-preview"
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
	implementation group: 'org.springframework', name: 'spring-websocket', version: '6.2.5'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate6:2.17.0'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
	implementation 'tech.units:indriya:2.1.3'
	implementation 'systems.uom:systems-common:2.1'
	runtimeOnly 'org.postgresql:postgresql:42.7.3'
	implementation 'org.wiremock:wiremock-standalone:3.0.1'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	implementation 'com.atlassian.ta:wiremock-pact-generator:2.5.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	implementation("org.flywaydb:flyway-database-postgresql")
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
	testImplementation 'io.rest-assured:rest-assured:5.3.0'
	testImplementation 'io.projectreactor:reactor-test:3.7.3'
	testImplementation 'org.mockito:mockito-core:5.19.0'
	testImplementation 'org.mockito:mockito-inline:5.2.0'
}

jacoco {
	toolVersion = "0.8.10"
}

jacocoTestReport {
	afterEvaluate {
		classDirectories.setFrom(
				files(classDirectories.files.collect {
					fileTree(dir: it, exclude: [
							'**/api/**',
							'**/config/**',
							'**/dto/**',
							'**/model/**'
					])
				})
		)
	}

	reports {
		xml.required = true
		html.required = true
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
tasks.named('bootRun') {
	jvmArgs += '--enable-preview'
}

jar {
    enabled = false
}
